just made a little changes in parse method